// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JIRA wiki markup - Text [EX-500] should handle escape correctly 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "* \\\\m",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text leading double dashes is not list 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "– This is not a list",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text leading triple dashes is not list 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "— This is not a list",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text multiple - should be rendered as plain text 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "------------- ---------------- ------------------",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text should ignore leading spaces on each line 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "foo",
          "type": "text",
        },
        Object {
          "type": "hardBreak",
        },
        Object {
          "text": "bar",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text should render empty paragraph if no content 1`] = `
Object {
  "content": Array [
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text should render simple text as a paragraph 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "foo bar",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text should replace four dashes with a ruler + ignore four dashes in a line of text 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "This is a text with ---- in it",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "type": "rule",
    },
    Object {
      "content": Array [
        Object {
          "text": "This is a text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text should respect \\ as a line break 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "foo ",
          "type": "text",
        },
        Object {
          "type": "hardBreak",
        },
        Object {
          "text": " bar",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text should respect \\\\ as a line break 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "foo ",
          "type": "text",
        },
        Object {
          "type": "hardBreak",
        },
        Object {
          "text": " bar",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text should treat \\ as a charater if it's not applied with any keyword 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "\\\\foobar",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text should treat ignored keyword as plantext 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "{ foobar",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
